@@ -1,15 +1,12 @@
 package com.babyshop.babyshop.models;
 
-import java.sql.Date;
 import java.sql.Timestamp;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collector;
-import java.util.stream.Collectors;
 
-import org.springframework.context.annotation.Scope;
+import org.hibernate.annotations.Where;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -17,6 +14,7 @@ import org.springframework.web.servlet.mvc.method.annotation.MvcUriComponentsBui
 
 import com.babyshop.babyshop.controller.ImageController;
 import com.babyshop.babyshop.util.Status;
+import com.fasterxml.jackson.annotation.JsonManagedReference;
 
 import jakarta.persistence.CascadeType;
 import jakarta.persistence.Column;
@@ -31,8 +29,8 @@ import jakarta.persistence.ManyToMany;
 import jakarta.persistence.OneToOne;
 import jakarta.persistence.Table;
 import lombok.AllArgsConstructor;
-import lombok.Builder;
 import lombok.Data;
+import lombok.EqualsAndHashCode;
 import lombok.NoArgsConstructor;
 
 @Data
@@ -41,6 +39,7 @@ import lombok.NoArgsConstructor;
 
 @Entity
 @Table(name = "user")
+@Where(clause = "status != 'LOCK'")
 public class User implements UserDetails {
 	@Id
 	@GeneratedValue(strategy = GenerationType.IDENTITY)
@@ -60,7 +59,7 @@ public class User implements UserDetails {
 	private String fullName;
 
 	@Column(name = "dob")
-	private Date dob;
+	private LocalDate dob;
 
 	@Column(name = "status")
 	private String status = Status.UNLOCK;
@@ -68,7 +67,9 @@ public class User implements UserDetails {
 	@Column(name = "gender")
 	private boolean gender;
 	
-	@OneToOne(mappedBy = "user")
+	@JsonManagedReference
+	@OneToOne(mappedBy = "user", cascade = CascadeType.ALL)
+	@EqualsAndHashCode.Exclude
 	private Customer customer;
 	
 	@Column(name = "created_at")
@@ -89,9 +90,8 @@ public class User implements UserDetails {
 
 	@Override
 	public Collection<? extends GrantedAuthority> getAuthorities() {
-		return roles.stream().map(role -> {
-			return new SimpleGrantedAuthority(role.getName());
-		}).collect(Collectors.toList());
+		return roles.stream().
+				map(role ->new SimpleGrantedAuthority(role.getName())).toList();
 	}
 
 	public String getUriAvatar() {
@@ -140,8 +140,4 @@ public class User implements UserDetails {
 	public boolean isEnabled() {
 		return true;
 	}
-	public LocalDate getDob() {
-		return this.dob.toLocalDate();
-	}
-
 }
